# xfce4-indicator-plugin

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  THANKS  TODO  autogen.sh  configure.ac  configure.ac.in  configure.in.in  meson.build  meson_options.txt  module.xml
icons/: Makefile.am  meson.build
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  indicator-box.c  indicator-box.h  indicator-button-box.c  indicator-button-box.h  indicator-button.c  indicator-button.h  indicator-config.c  indicator-config.h  indicator-dialog.c  indicator-dialog.glade  indicator-dialog.gresource.xml  indicator-dialog.h  indicator-dialogs.c  indicator-dialogs.h  indicator.c  indicator.desktop.in  indicator.desktop.in.in  indicator.h  meson.build
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lo.po  lt.po  ms.po  nb.po  nl.po  oc.po  (+18 more)
