install_data(
  '48x48' / 'xfce4-indicator-plugin.png',
  install_dir: get_option('prefix') / get_option('datadir') / 'icons' / 'hicolor' / '48x48' / 'apps',
)

install_data(
  'scalable' / 'xfce4-indicator-plugin.svg',
  install_dir: get_option('prefix') / get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
)
